fix up spacing

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -99,7 +99,7 @@ header h2 {
 }
 
 #downloads {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 a.button {
